<resources>
<!-- app/src/main/res/values/strings.xml (add these) -->
    <string name="settings">Settings</string>
    <string name="menu">Menu</string>
    <string name="app_name">HyperNotes</string>
    <string name="add_note">Add note</string>
    <string name="toggle_theme">Toggle theme</string>
    <string name="dark_mode">Dark mode enabled</string>
    <string name="light_mode">Light mode enabled</string>
    <string name="note_title">Note title</string>
    <string name="note_content_optional">Note content (optional)</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="add_new_note">Add new note</string>
    <string name="edit">Edit</string>
    <string name="note_options">Note options</string>
    <string name="confirm_delete">Confirm delete</string>
    <string name="delete_message">Are you sure you want to delete this note?</string>
    <string name="note_deleted">Note deleted</string>
    <string name="note_created">New note created</string>
    <string name="opening">Opening</string>
    <string name="untitled_note">Untitled note</string>
    <string name="tap_to_edit">Tap to edit</string>
    <string name="choose_color">Choose Color</string>
    <string name="choose_symbol">Choose Symbol</string>
    <string name="random_color">Random Color</string>
    <string name="random_symbol">Random Symbol</string>
    <string name="custom_emoji">Custom Emoji</string>
    <string name="note_content">Note Content</string>
    <string name="note_icon">Note Icon</string>
    <string name="add">Add</string>
    <string name="choose_emoji">Choose Emoji</string>
    <string name="enter_emoji_hint">Enter emoji 😊</string>
    <string name="random_shuffle_hint">The shuffle icon indicates a random symbol will be chosen</string>
    <string name="add_custom_symbol">Add Custom Symbol</string>
    <string name="edit_note">Edit Note</string>
    <string name="error_empty_title">Title cannot be empty</string>
    <string name="note_saved">Note saved</string>
    <string name="action_search">Search</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="change_accent_color">Change Accent Color</string>
    <string name="action_settings">Settings</string>
    <string name="note_preview">Note Preview</string>
    <string name="save_note">Save Note</string>
    <string name="create_note">Create Note</string>
    <string name="note_symbol_description">Note symbol</string>
    <string-array name="color_names">
        <item>Pink</item>
        <item>Purple</item>
        <item>Blue</item>
        <item>Peach</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Lavender</item>
        <item>Teal</item>
    </string-array>
</resources>